--- a/game.css
+++ b/game.css
@@ -1,31 +1,27 @@
 .game{
     width: 255px;
     text-align: center;
-    color: black;
+    font-family: system-ui;
+    color: white;
     margin: auto;
     font-weight: 500;
 }
 
 .title{
-    background: green;
-    padding:5px 0 ;
-    margin: 5px;
+    background-color: rgb(180, 157, 216);
+    padding: 5px 0;
+    margin: 5px 0;
 }
-span{
-    color: red;
 
+span{
+    color: aqua;
 }
 
 .square{
-    width: 90px;
-    height: 90px;
-    background: green;
+    width: 80px;
+    height: 80px;
+    background-color: rgb(219, 106, 205);
     float: left;
-    margin: 3px;
-    font-size: 70px;
-}
-
-.square:hover{
-    background-color: red;
-    cursor: pointer;
+    margin: 2px;
+    font-size: 50px;
 }
