--- a/game.css
+++ b/game.css
@@ -1,5 +1,6 @@
 .game{
-    width: 255px;
+    width: 600px;
+    height: 600px;
     text-align: center;
     color: black;
     margin: auto;
@@ -7,9 +8,11 @@
 }
 
 .title{
+    letter-spacing: 2px;
     background: green;
     padding:5px 0 ;
     margin: 5px;
+    font-size: 30px;
 }
 span{
     color: red;
@@ -17,8 +20,8 @@ span{
 }
 
 .square{
-    width: 90px;
-    height: 90px;
+    width: 191px;
+    height: 150px;
     background: green;
     float: left;
     margin: 3px;
